Modified the buttons a bit, starting with the struc for tracks

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,10 @@
         <p class="subtitle">Synchronise your playlists across platforms</p>
 
         <div style="margin-bottom: 20px" class="button-group">
-            <button onclick="getPlaylistFromDeezer()">
+            <button onclick="getTrackNumberFromPlaylists()">
+                Check the track number difference between Deezer and Spotify
+            </button>
+            <button onclick="getSyncStatus()">
                 Check Sync status between Deezer and Spotify
             </button>
         </div>
@@ -74,7 +77,7 @@
                 });
         }
 
-        async function getPlaylistFromDeezer() {
+        async function getTrackNumberFromPlaylists() {
             const container = document.getElementById('status-container');
             // show a loading state
             container.innerHTML = `<div class="sync-status">
@@ -127,6 +130,41 @@
                 .catch(error => {
                     console.error('Error:', error);
                 });
+        }
+
+        async function getSyncStatus() {
+            const container = document.getElementById('status-container');
+            // show a loading state
+            container.innerHTML = `<div class="sync-status">
+                <h2 style="margin-bottom: 20px; color: #333;">Sync Status</h2>
+                <div class="status-item">
+                    <span class="status-label">Loading…</span>
+                    <span class="status-value">⌛</span>
+                </div>
+            </div>`;
+
+            try {
+                const res = await fetch('/api/sync-status');
+                if (!res.ok) throw new Error(`HTTP ${res.status}`);
+                const html = await res.text();
+
+                const content = `<div class="sync-status">
+                    <h2 style="margin-bottom: 20px; color: #333;">Sync Status</h2>
+                    <div class="status-item">
+                        <span class="status-label">All tracks are synchronised: </span>
+                        <span class="status-value" id="sync-ok">OK</span>
+                    </div>
+                    </div>`;
+                container.innerHTML = content;
+            } catch (err) {
+                console.error('Error fetching sync status:', err);
+                container.innerHTML = `<div class="sync-status">
+                    <div class="status-item">
+                        <span class="status-label">Error:</span>
+                        <span class="status-value">Failed to load sync status</span>
+                    </div>
+                </div>`;
+            }
         }
 
         document.addEventListener('DOMContentLoaded', function() {
