Successfully storing a track from Deezer.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,8 +46,8 @@
             <button onclick="checkBackendHealth()">
                 Check Backend Health
             </button>
-            <button onclick="refreshSyncStatus()">
-                Refresh Sync Status
+            <button onclick="getRandomTrack()">
+                Get random track
             </button>
         </div>
     </div>
